feature: 自研云特殊处理 --story=115781004 自研云账号特殊处理 (merge request !849)
Squash merge branch 'feature/import_ziyan' into 'feature-ziyan'

TAPD: --story=115781004

--- a/front/src/hooks/useTable/index.scss
+++ b/front/src/hooks/useTable/index.scss
@@ -1,4 +1,29 @@
-.common-search-selector {
-  margin-left: auto;
+.operation-wrap {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 16px;
+
+  .operate-btn-groups {
+    display: flex;
+
+    .bk-button {
+      min-width: 88px;
+
+      &:not(:last-child) {
+        margin-right: 12px;
+      }
+    }
+  }
+}
+
+.loading-table-container {
+  height: calc(100% - 64px);
+
+  .table-container {
+    max-height: 100%;
+
+    .binding-row td{
+      background-color: #f2fff4 !important;
+    }
+  }
 }
