--- a/front/src/views/resource/resource-manage/hooks/use-columns.scss
+++ b/front/src/views/resource/resource-manage/hooks/use-columns.scss
@@ -2,3 +2,20 @@
   display: flex;
   align-items: center;
 }
+
+.status-column-cell {
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
+  line-height: 20px;
+
+  .status-icon {
+    margin-right: 7px;
+    width: 14px;
+    height: 14px;
+  }
+  
+  .partial-success-status-text {
+    border-bottom: 1px dashed rgb(151, 155, 165);
+  }
+}
