feat:路由合并、列表组件、主机库存、主机申请 (merge request !933)
Squash merge branch 'test-bcc/feature-scr' into 'bcc/feature-scr'

--story=117658995 资源申请-CVM库存查询
--story=117632179 SCR框架自研云资源路由搭建
--story=117615003 SCR基础列表开发
--story=117688568


TAPD: --story=117632179
TAPD: --story=117688568

--- a/front/src/views/resource/resource-manage/hooks/use-columns.scss
+++ b/front/src/views/resource/resource-manage/hooks/use-columns.scss
@@ -57,3 +57,12 @@
     color: #63656e;
   }
 }
+.c-success {
+  color: #67c23a !important;
+}
+ .c-danger {
+  color: #f56c6c !important;
+}
+ .c-warning {
+  color: #e6a23c !important;
+}
