--- a/front/src/views/ziyanScr/hostApplication/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/index.scss
@@ -71,4 +71,20 @@
 .width-400 {
     width: 400px;
 }
-
+.bill-filter-form {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #fff;
+  margin: 15px 0;
+  padding: 10px;
+  & > div {
+      margin-bottom: 10px;
+  }
+  .bill-form-btn {
+      display: flex;
+      align-items: center;
+      .bk-button+.bk-button {
+          margin-left: 10px;
+      }
+  }
+}
