单据列表和设备列表接口联调 (merge request !958)
Squash merge branch 'bcc-scr-featuer' into 'bcc/feature-scr'
单据列表和设备列表接口联调

--- a/front/src/views/ziyanScr/host-recycle/host-recycle-table/index.scss
+++ b/front/src/views/ziyanScr/host-recycle/host-recycle-table/index.scss
@@ -8,11 +8,28 @@
         margin-bottom: 10px;
     }
     .bill-form-btn {
-        display: flex;
-        align-items: center;
-        .bk-button+.bk-button {
-            margin-left: 10px;
+        .bk-form-content {
+            display: flex;
+            align-items: center;
+            .bk-button+.bk-button {
+                margin-left: 10px;
+            }
         }
+    }
+}
+.sub-order-num,.username {
+    color: #409eff;
+    cursor: pointer;
+}
+.order-width {
+    width: 180px;
+}
+.tag-input-width {
+    width: 165px;
+}
+.recycle-operation {
+    .bk-button+.bk-button {
+        margin-left: 10px;
     }
 }
 .displayflex {
