feat: useTable改造  --story=117820135 (merge request !961)
Squash merge branch 'bcc/feat-scr-resource-manage' into 'bcc/feature-scr'
feat: useTable改造  --story=117820135

TAPD: --story=117820135

--- a/front/src/hooks/useTable/index.scss
+++ b/front/src/hooks/useTable/index.scss
@@ -33,6 +33,7 @@
 
   .loading-table-container {
     height: calc(100% - 48px);
+    min-height: 290px;
 
     .table-container {
       max-height: 100%;
