feat: SCR迁移-资源上下架-资源上/下架 (merge request !975)
Squash merge branch 'bcc/feat-scr-resource-manage' into 'bcc/feature-scr'
feat: SCR迁移-资源上下架-资源上/下架

--story=117808489
--story=117808500


TAPD: --story=117808247

--- a/front/src/views/home/index.scss
+++ b/front/src/views/home/index.scss
@@ -287,3 +287,17 @@
     overflow: hidden;
   }
 }
+
+.common-sub-main-container {
+  position: relative;
+  top: 52px;
+  height: calc(100% - 52px);
+  padding: 24px;
+
+  .sub-main-content {
+    height: 100%;
+    padding: 16px 24px;
+    background-color: #fff;
+    overflow-y: auto;
+  }
+}
