--- a/front/src/views/ziyanScr/resource-manage/create/index.scss
+++ b/front/src/views/ziyanScr/resource-manage/create/index.scss
@@ -1,7 +1,7 @@
-.scr-resource-manage-detail-page {
+.scr-resource-manage-create-page {
   height: 100%;
 
-  .operation-bar {
+  .table-operation-bar {
     display: flex;
     align-items: center;
     margin-bottom: 12px;
