资源预测与单据管理表格 (merge request !971)
Squash merge branch 'feature-plan' into 'bcc/feature-plan'
资源预测与单据管理表格

--- a/front/src/views/resource-plan/add/index.module.scss
+++ b/front/src/views/resource-plan/add/index.module.scss
@@ -1,3 +1,19 @@
 .home {
   padding: 15px;
 }
+.add-font{
+  font-size: 16px;
+}
+.btn-margin{
+  margin: 16px 0;
+} 
+.flex{
+  display: flex;
+  align-items: center;
+}
+.ml-24{
+  margin-left: 24px;
+}
+.total-color{
+  color: #313238;
+}
