添加资源申请部分代码

--- a/front/src/views/resource-plan/add/add/basic/index.module.scss
+++ b/front/src/views/resource-plan/add/add/basic/index.module.scss
@@ -11,6 +11,10 @@
     margin-bottom: 0 !important;
   }
 
+  :global(.bk-date-picker) {
+    width: 100%;
+  }
+
   :global(.bk-radio-group) {
     width: 100%;
   }
