--- a/front/src/views/resource-plan/add/index.module.scss
+++ b/front/src/views/resource-plan/add/index.module.scss
@@ -1,19 +1,7 @@
 .home {
-  padding: 15px;
+  padding: 24px;
 }
-.add-font{
-  font-size: 16px;
-}
-.btn-margin{
-  margin: 16px 0;
-} 
-.flex{
-  display: flex;
-  align-items: center;
-}
-.ml-24{
-  margin-left: 24px;
-}
-.total-color{
-  color: #313238;
+
+.mt-16 {
+  margin-top: 16px;
 }
