--- a/front/src/views/resource-plan/add/add/cvm/index.module.scss
+++ b/front/src/views/resource-plan/add/add/cvm/index.module.scss
@@ -24,6 +24,12 @@
     padding: 0 10px;
   }
 
+  .info {
+    font-size: 12px;
+    line-height: 20px;
+    position: absolute;
+  }
+
   :global(.bk-form-item) {
     margin-bottom: 0 !important;
   }
