feat:优化SCR-主机回收联调  --story=117922233

--- a/front/src/views/ziyanScr/RecyclingResources/index.scss
+++ b/front/src/views/ziyanScr/RecyclingResources/index.scss
@@ -1,6 +1,4 @@
 .div-RecyclingResources{
-    margin: 15px;
-    background-color: #fff;
     .div-title {
         font-size: 18px;
         height: 60px;
@@ -30,4 +28,7 @@
     border: 2px solid #e1e4ea;
     border-top: 0;
     padding-left: 20px;
+}
+.dialog-cancel{
+    margin-left: 10px;
 }
