--- a/front/src/views/resource-plan/add/add/cvm/index.module.scss
+++ b/front/src/views/resource-plan/add/add/cvm/index.module.scss
@@ -41,7 +41,8 @@
   :global(.bk-radio-button) {
     width: 96px;
   }
-  .ml-8{
+  .tip-text{
      margin-left: 8px;
+     font-size: 12px;
   }
 }
