feat: 体验问题修复 # Reviewed, transaction id: 9693

--- a/front/src/views/resource-plan/add/memo/index.module.scss
+++ b/front/src/views/resource-plan/add/memo/index.module.scss
@@ -1,4 +1,12 @@
 .home {
   margin: 0 28px 8px;
   width: 864px;
+
+  :global(.bk-textarea) {
+    height: 200px;
+
+    textarea {
+      height: 100%;
+    }
+  }
 }
