--- a/front/src/views/resource-plan/add/add/basic/index.module.scss
+++ b/front/src/views/resource-plan/add/add/basic/index.module.scss
@@ -22,4 +22,12 @@
   :global(.bk-radio-button) {
     width: 50%;
   }
+
+  :global(.bk-textarea) {
+    height: 100px;
+
+    textarea {
+      height: 100%;
+    }
+  }
 }
