feat: 单据问题修复 --story=117918855

--- a/front/src/views/ziyanScr/hostApplication/components/application-detail/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-detail/index.scss
@@ -1,5 +1,11 @@
 .application-detail-container {
   .detail-wrapper {
     margin: 76px 24px;
+    .timeline-container {
+      padding-top: 10px;
+      .timeline-content-txt {
+        color: #979BA5;
+      }
+    }
   }
 }
