feat:验收问题和自测问题修复 (merge request !1073)
Squash merge branch 'bcc/test-scr-0618' into 'bcc/feature-scr'
--story=117922304 SCR-主机库存、主机申请、主机回收等已完成模块的问题修复


TAPD: --story=117922304

--- a/front/src/views/ziyanScr/RecyclingResources/index.scss
+++ b/front/src/views/ziyanScr/RecyclingResources/index.scss
@@ -1,34 +1,37 @@
-.div-RecyclingResources{
-    .div-title {
-        font-size: 18px;
-        height: 60px;
-        line-height: 40px;
-        padding: 10px 0 10px 20px;
-        color: #000;
-        border: #e1e4ea 2px solid;
-    }
-    .div-components{
-        border: 2px solid #e1e4ea;
-        border-top: 0;
-        .div-steps{
-            width: 70%;
-            margin: 0 auto;
-            padding-top: 30px;
-            padding-bottom: 30px;
-        }
-    }
-}
-.div-ResourceSelect{
-    width: 97%;
-    margin: 0 auto;
-}
-.div-Button{
-    height: 70px;
-    line-height: 70px;
+.div-RecyclingResources {
+  .div-title {
+    font-size: 18px;
+    height: 60px;
+    line-height: 40px;
+    padding: 10px 0 10px 20px;
+    color: #000;
+    border: #e1e4ea 2px solid;
+  }
+  .div-components {
     border: 2px solid #e1e4ea;
     border-top: 0;
-    padding-left: 20px;
+    .div-steps {
+      width: 70%;
+      margin: 0 auto;
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
+  }
 }
-.dialog-cancel{
-    margin-left: 10px;
+.div-ResourceSelect {
+  width: 97%;
+  margin: 0 auto;
+}
+.div-Button {
+  height: 70px;
+  line-height: 70px;
+  border: 2px solid #e1e4ea;
+  border-top: 0;
+  padding-left: 20px;
+}
+.dialog-cancel {
+  margin-left: 10px;
+}
+.ml15 {
+  margin-left: 15px;
 }
