feat：物理机单据&算力资源池 (merge request !1095)
Squash merge branch 'feat-bcc/update-application' into 'bcc/feature-scr'
Merge branch 'bcc/feature-scr' into feat-bcc/update-application


TAPD: --story=117918855

--- a/front/src/views/ziyanScr/hostApplication/components/application-detail/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-detail/index.scss
@@ -7,5 +7,15 @@
         color: #979BA5;
       }
     }
+    .copy-wrapper {
+      display: flex;
+      align-items: center;
+      .copy-icon {
+        cursor: pointer;
+        &:hover {
+          color: #3A84FF;
+        }
+      }
+    }
   }
 }
