feat:新增申请，添加侧边栏最大申请数Popover开发 (merge request !1101)
Squash merge branch 'bcc/test-scr-0620' into 'bcc/feature-scr'
feat:新增申请，添加侧边栏最大申请数Popover开发


TAPD: --story=117922304

--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -7,7 +7,6 @@
     display: flex;
     align-items: center;
   }
-  
 }
 
 .scr-form-wrapper {
@@ -18,4 +17,18 @@
   .bk-form-item {
     margin: 8px 0;
   }
+}
+.tooltips {
+  height: 60px;
+  line-height: 60px;
+  text-align: right;
+  .content {
+    text-align: left;
+    .application {
+      font-size: 14px;
+    }
+  }
+}
+.volumetip {
+  color: #e6a23c;
 }
