fix:主机申请地域和园区翻译、排序、设备查询默认值显示修复 (merge request !1109)
Squash merge branch 'bcc-scr-featuer' into 'bcc/feature-scr'
fix:主机申请地域和园区翻译、排序、设备查询默认值显示修复

--- a/front/src/views/ziyanScr/hostApplication/components/application-detail/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-detail/index.scss
@@ -18,4 +18,13 @@
       }
     }
   }
+  .apply-human {
+    margin-bottom: 10px;
+  }
+  .apply-operate {
+    margin-top: 10px;
+    .bk-button+.bk-button{
+      margin-left: 10px;
+    }
+  }
 }
