--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -20,8 +20,9 @@
 }
 .tooltips {
   height: 60px;
-  line-height: 60px;
+  line-height: 30px;
   text-align: right;
+  margin-top: 10px;
   .content {
     text-align: left;
     .application {
