feat:表单校验、业务组件修改、验收问题修复 (merge request !1118)
Squash merge branch 'bcc/test-scr-0623' into 'bcc/feature-scr'
--story=117922304 SCR-主机库存、主机申请、主机回收等已完成模块的问题修复


TAPD: --story=117922304

--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -29,6 +29,11 @@
       font-size: 14px;
     }
   }
+  .calculationDetails {
+    text-decoration: underline;
+    color: #909399;
+    font-size: 12px;
+  }
 }
 .volumetip {
   color: #e6a23c;
