--- a/front/src/views/ziyanScr/cvm-model/index.scss
+++ b/front/src/views/ziyanScr/cvm-model/index.scss
@@ -1,12 +1,35 @@
-.tabselect{
+.cvmModel-tabselect {
   display: flex;
   align-items: center;
   height: 40px;
-  margin: 10px  10px 0;
-  .tbkselect{
+  margin: 10px 10px 0;
+  .tbkselect {
     margin: 0 10px;
   }
-  .bkbutton{
+  .cvmModel-div{
+    width: 70px;
+    text-align: right;
+  }
+}
+.cvmModel-displayflex {
+  display: flex;
+  padding: 6px 14px 5px;
+  flex-wrap: wrap;
+}
+.cvmModel-displaybutton {
+  display: flex;
+  align-items: center;
+  padding: 6px 14px 10px;
+  flex-wrap: wrap;
+  margin: 5px 10px 20px;
+  .bkbutton {
     margin-right: 10px;
   }
+}
+.scr-resource {
+  margin: 24px;
+  background-color: #fff;
+}
+.cvmModel-CommonTable{
+  padding:15px;
 }
