--- a/front/src/views/ziyanScr/hostInventory/index.scss
+++ b/front/src/views/ziyanScr/hostInventory/index.scss
@@ -1,12 +1,23 @@
-.tabselect{
+.tabselect {
   display: flex;
   align-items: center;
   height: 40px;
-  margin: 10px  10px 0;
-  .tbkselect{
+  margin: 10px 10px 0;
+  .tbkselect {
     margin: 0 10px;
   }
-  .bkbutton{
+  .bkbutton {
     margin-right: 10px;
   }
+}
+.scr-resource{
+  margin: 24px;
+  background-color: #fff;
+}
+.displayflex {
+  display: flex;
+  padding: 6px 14px 30px;
+}
+.host-CommonTable{
+  padding:15px;
 }
