--- a/front/src/views/ziyanScr/hostApplication/components/application-detail/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-detail/index.scss
@@ -10,11 +10,8 @@
     .copy-wrapper {
       display: flex;
       align-items: center;
-      .copy-icon {
-        cursor: pointer;
-        &:hover {
-          color: #3A84FF;
-        }
+      .bk-button {
+        margin-left: 5px;
       }
     }
   }
@@ -25,6 +22,28 @@
     margin-top: 10px;
     .bk-button+.bk-button{
       margin-left: 10px;
+    }
+  }
+}
+.sideslider-content {
+  padding: 10px 20px 0 20px;
+  .des-top {
+    margin-bottom: 10px;
+    & > div {
+      label{
+        margin-right: 10px;
+      }
+    }
+  }
+  .record-expand {
+    .bk-table {
+      width: 75% !important;
+      margin-left: 25%;
+      .bk-table-head {
+        .cell {
+          background-color: #fff !important;
+        }
+      }
     }
   }
 }
