--- a/front/src/views/ziyanScr/recycle-server-room/table/index.module.scss
+++ b/front/src/views/ziyanScr/recycle-server-room/table/index.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   align-items: center;
 
+  .search-label {
+    margin-right: 8px;
+  }
+
   .search-item {
     width: 300px;
     margin-right: 24px;
