feat: 资源上下架二次验收问题修复 (merge request !1129)
Squash merge branch 'bcc/feat-scr-resource-manage' into 'bcc/feature-scr'
feat: 资源上下架样式修复

--story=118141640
# Reviewed, transaction id: 10363


TAPD: --story=118141640

--- a/front/src/views/ziyanScr/resource-manage/index.scss
+++ b/front/src/views/ziyanScr/resource-manage/index.scss
@@ -3,19 +3,8 @@
   padding: 24px;
 
   .manage-container {
-    padding: 6px 14px;
-
-    .filter-container {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-
-      .filter-item {
-        display: flex;
-        align-items: center;
-        margin-bottom: 12px;
-      }
-    }
+    height: 100%;
+    padding: 24px;
 
     .w150 {
       width: 150px;
@@ -23,6 +12,19 @@
 
     .w200 {
       width: 200px;
+    }
+
+    .f22 {
+      font-size: 22px;
+    }
+  }
+
+  .bk-tab--card-grid {
+    height: 100%;
+
+    .bk-tab-content {
+      height: calc(100% - 40px);
+      padding: 0;
     }
   }
 }
