fix:样式和逻辑修复 (merge request !1135)
Squash merge branch 'bcc-scr-featuer' into 'bcc/feature-scr'
fix:主机申请-单据详情IP取值、主机回收操作按钮显示修复

--- a/front/src/components/edit-item/index.scss
+++ b/front/src/components/edit-item/index.scss
@@ -4,6 +4,9 @@
     & > div:first-child {
         margin-right: 10px;
     }
+    .bool-color {
+        color: #67c23a;
+    }
 }
 .pop-content-container{
     display: flex;
