--- a/front/src/views/resource/resource-manage/hooks/use-scr-columns.scss
+++ b/front/src/views/resource/resource-manage/hooks/use-scr-columns.scss
@@ -69,6 +69,9 @@
   .c-warning {
     color: #e6a23c !important;
   }
+  .c-disabled {
+    color: #c8c9cc;
+  }
   .fail-flex {
     display: flex;
     align-items: center;
