--- a/front/src/views/ziyanScr/host-recycle/bill-detail/index.scss
+++ b/front/src/views/ziyanScr/host-recycle/bill-detail/index.scss
@@ -1,5 +1,7 @@
 .bill-detail {
-    padding: 0 15px 15px;
+    margin: 0 10px;
+    margin-top: 72px;
+    padding: 0 15px;
     background-color: #fff;
     .bk-button+.bk-button {
         margin-left: 10px;
