--- a/front/src/views/ziyanScr/RecyclingResources/components/index.scss
+++ b/front/src/views/ziyanScr/RecyclingResources/components/index.scss
@@ -20,6 +20,7 @@
   display: flex;
   width: 450px;
   align-items: center;
+  margin-top: 20px;
   .displayflex-test{
     margin-left: 10px;
     width: 50px;
