--- a/front/src/views/ziyanScr/cvm-produce/component/create-order/cvm-form/index.scss
+++ b/front/src/views/ziyanScr/cvm-produce/component/create-order/cvm-form/index.scss
@@ -1,8 +1,9 @@
 .cvm-capacity-card {
     position: absolute;
-    left: calc(100% + 200px);
+    left: calc(100% + 170px);
     top: -50%;
     min-width:380px;
+    box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
     .cvm-capacity {
         &-item {
             display: flex;
@@ -52,6 +53,9 @@
         div+div {
             margin-left: 10px;
         }
+        .bk-input {
+            width: 165px;
+        }
     }
     .c-warning {
         color: #e6a23c;
@@ -65,6 +69,9 @@
         position: relative;
         & > div+div {
             margin-left: 10px;
+        }
+        .bk-input {
+            width: 165px;
         }
     }
 }
