--- a/front/src/views/ziyanScr/host-recycle/pre-details/index.scss
+++ b/front/src/views/ziyanScr/host-recycle/pre-details/index.scss
@@ -10,45 +10,10 @@
   margin-bottom: 15px;
 }
 
-.apply-list-container {
-  .filter-container {
-    margin-bottom: 8px;
-  }
-  .precheck-input {
-    display: flex;
-    align-items: center;
-    & > span {
-      display: inline-block;
-      width: 80px;
-      text-align: right;
-    }
-    .bk-tag-input {
-      margin: 0 10px;
-    }
-    .bk-button + .bk-button {
-      margin-left: 10px;
-    }
+.application-detail-container {
+  .detail-wrapper {
+    margin: 76px 10px;
   }
 }
 
-.scr-form-wrapper {
-  margin: 0 24px;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  .bk-form-item {
-    margin: 8px 0;
-    .bk-form-content,
-    .bk-date-picker {
-      width: 280px;
-    }
-    .bk-button {
-      margin-right: 8px !important;
-    }
-  }
-}
-.application-detail-container {
-  .detail-wrapper {
-    margin: 76px 0px;
-  }
-}
+@import url(../../css/form.scss);
