--- a/front/src/views/ziyanScr/resource-manage/filter-form-items/index.module.scss
+++ b/front/src/views/ziyanScr/resource-manage/filter-form-items/index.module.scss
@@ -1,6 +1,7 @@
 .filter-container {
   margin-bottom: 16px;
-
+  padding: 24px;
+  background-color: #fff;
   .filter-items-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
