--- a/front/src/views/ziyanScr/cvm-model/index.scss
+++ b/front/src/views/ziyanScr/cvm-model/index.scss
@@ -33,3 +33,31 @@
 .cvmModel-CommonTable{
   padding:15px;
 }
+.sub-order-num,.username {
+  color: #409eff;
+  cursor: pointer;
+}
+.order-width {
+  width: 180px;
+}
+.recycle-operation {
+  display: flex;
+  align-items: center;
+  .bk-button+.bk-button {
+      margin-left: 10px;
+  }
+}
+.displayflex {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.pop-btn {
+  margin-top: 10px;
+}
+.cvm-web-wrapper {
+  margin: 20px 10px 0;
+}
+@import url(../css/form.scss);
