--- a/front/src/views/ziyanScr/hostApplication/components/application-list/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-list/index.scss
@@ -1,28 +1,28 @@
-.apply-list-container {
-  .filter-container {
-    margin-bottom: 8px;
-  }
-  .table-container {
-    margin-top: 8px;
-    .sub-order-txt {
-      font-size: 10px;
-      color: #C4C6CC;
-    }
-  }
+.sub-order-num,.username {
+  color: #409eff;
+  cursor: pointer;
 }
-
-.scr-form-wrapper {
-  margin: 0 24px;
+.order-width {
+  width: 180px;
+}
+.recycle-operation {
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
-  .bk-form-item {
-    margin: 8px 0;
-    .bk-form-content, .bk-date-picker {
-      width: 280px;
-    }
-    .bk-button {
-      margin-right: 8px!important;
-    }
+  .bk-button+.bk-button {
+      margin-left: 10px;
   }
 }
+.displayflex {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.pop-btn {
+  margin-top: 10px;
+}
+.filter-tap-null{
+  height: 20px;
+}
+@import url(../../../css/form.scss);
