--- a/front/src/views/ziyanScr/hostApplication/components/device-query/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/device-query/index.scss
@@ -1,26 +1,26 @@
-.device-query-container {
-  .bill-filter-form {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #fff;
-    margin: 15px 0;
-    padding: 10px;
-
-    .filter-item {
-      width: 200px
-    }
-
-    &>div {
-      margin-bottom: 10px;
-    }
-
-    .bill-form-btn {
-      display: flex;
-      align-items: center;
-
-      .bk-button+.bk-button {
-        margin-left: 10px;
-      }
-    }
+.sub-order-num,.username {
+  color: #409eff;
+  cursor: pointer;
+}
+.order-width {
+  width: 180px;
+}
+.recycle-operation {
+  display: flex;
+  align-items: center;
+  .bk-button+.bk-button {
+      margin-left: 10px;
   }
 }
+.displayflex {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.pop-btn {
+  margin-top: 10px;
+}
+
+@import url(../../../css/form.scss);
