--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -6,9 +6,22 @@
   .flexrow {
     display: flex;
     align-items: center;
+    height: 30px !important;
   }
 }
-
+.QCLOUDCVM-fontweight {
+  margin-left: 40px;
+  text-align: center;
+  font-size: 14px;
+}
+.QCLOUDCVM-fontsize {
+  font-size: 14px;
+  margin-left: 5px;
+}
+.QCLOUDCVM-displayflex {
+  display: flex;
+  cursor: pointer
+}
 .scr-form-wrapper {
   margin: 0 24px;
   display: flex;
