fix: 近期验收的缺陷问题修复 (merge request !1168)
Squash merge branch 'bcc/test-scr-0640' into 'bcc/feature-scr'
--bug=126510741 SCR-主机申请-匹配主机，表格列距不够
--bug=126510577 SCR-主机申请-修改需求重试，提交按钮的样式错乱
--bug=126510465 SCR-主机申请-表格样式不正确
--bug=126510267 SCR-主机申请，样式错乱
--bug=126508859 SCR-主机申请-添加机型-选择VPC&子网，清除后不生效


TAPD: --bug=126508859
TAPD: --bug=126510577
TAPD: --bug=126510465
TAPD: --bug=126510741
TAPD: --bug=126510267

--- a/front/src/views/ziyanScr/hostApplication/components/application-modify/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-modify/index.scss
@@ -9,7 +9,15 @@
     }
     
   }
-  
+  .buttonSubmit{
+    padding: 16px 0px;
+    Button {
+      width: 88px;
+    }
+  }
+  .mr8{
+    margin-right: 8px;
+  }
   .scr-form-wrapper {
     margin: 0 24px;
     display: flex;
