fix:验收缺陷单修复 (merge request !1175)
Squash merge branch 'bcc/test-scr-0641' into 'bcc/feature-scr'
--bug=126640033 SCR-主机申请-单据详情-资源生产详情页面的排版异常了，有些字段看不到了
--bug=126544873 SCR-主机申请-需求修改以后，剩余容量评估的部分缺了loading状态切换的交互

TAPD: --bug=126546847
TAPD: --bug=126640033
TAPD: --bug=126588061
TAPD: --bug=126544873
TAPD: --bug=126589971
TAPD: --bug=126587855

--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -9,6 +9,17 @@
     height: 30px !important;
   }
 }
+.QCLOUDCVM-displayflex {
+  display: flex;
+  align-content: center;
+  .item-warp {
+    margin-right: 50px;
+    height: 45px;
+    .item-warp-component {
+      width: 300px;
+    }
+  }
+}
 .QCLOUDCVM-fontweight {
   margin-left: 40px;
   text-align: center;
@@ -20,7 +31,7 @@
 }
 .QCLOUDCVM-displayflex {
   display: flex;
-  cursor: pointer
+  cursor: pointer;
 }
 .scr-form-wrapper {
   margin: 0 24px;
