fixt:SCR-缺陷问题修复 (merge request !1179)
Squash merge branch 'bcc/test-scr-0701' into 'bcc/feature-scr'
--bug=126544565 SCR-主机申请-添加需求保存以后，重新修改区域不生效
--bug=126587855 SCR-主机回收-输入IP数超过500时缺少提示
--bug=126639149 SCR-主机申请-申请单重试、终止报错
--bug=126640033 SCR-主机申请-单据详情-资源生产详情页面的排版异常了，有些字段看不到了
--bug=126508859 SCR-主机申请-添加机型-选择VPC&子网，清除后不生效
--bug=126589327 SCR-主机回收的操作列表易用性是否可以提升
--bug=126544873 SCR-主机申请-需求修改以后，剩余容量评估的部分缺了loading状态切换的交互

TAPD: --bug=126589327
TAPD: --bug=126640033
TAPD: --bug=126639149
TAPD: --bug=126544873
TAPD: --bug=126544565
TAPD: --bug=126587855
TAPD: --bug=126508859

--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -20,9 +20,14 @@
     }
   }
 }
+.mr10 {
+  margin-right: 10px;
+}
 .QCLOUDCVM-fontweight {
   margin-left: 40px;
   text-align: center;
+  color: #313238;
+  font-weight: 400;
   font-size: 14px;
 }
 .QCLOUDCVM-fontsize {
@@ -61,4 +66,21 @@
 }
 .volumetip {
   color: #e6a23c;
+}
+.QCLOUDCVM-card-content {
+  padding: 0 28px;
+}
+.QCLOUDCVM-card-title {
+  font-weight: 700;
+  font-size: 14px;
+  color: #313238;
+  letter-spacing: 0;
+  margin-right: 16px;
+  margin-bottom: 16px;
+  margin-top: 16px;
+}
+.QCLOUDCVM-card-content-grid-layout {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 24px;
 }
