--- a/front/src/views/ziyanScr/hostApplication/components/application-modify/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-modify/index.scss
@@ -45,6 +45,8 @@
 .order-fontweight {
   margin-left: 40px;
   text-align: center;
+  color: #313238;
+  font-weight: 400;
   font-size: 14px;
 }
 .order-fontsize {
