--- a/front/src/views/ziyanScr/host-recycle/host-recycle-table/index.scss
+++ b/front/src/views/ziyanScr/host-recycle/host-recycle-table/index.scss
@@ -25,5 +25,61 @@
   .pop-btn {
     margin-top: 10px;
   }
+  .more-action-item {
+    &.disabled {
+      color: #dcdee5;
+      cursor: not-allowed;
+    }
+  }
+  .has-selection {
+    .bk-table .bk-table-head .bk-checkbox {
+      vertical-align: middle;
+    }
+    .bk-table .bk-table-head tr th:nth-of-type(2) .cell {
+      padding-left: 16px;
+    }
+    .bk-table .bk-table-body .cell.selection {
+      text-align: right;
+      .bk-checkbox {
+        vertical-align: middle;
+      }
+    }
+    .bk-table .bk-table-body tr td:nth-of-type(2) .cell {
+      padding-left: 16px;
+    }
+  }
+.operation-column{
+    height: 100%;
+    display: flex;
+    align-items: center;
   
+    .more-action {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      cursor: pointer;
+  
+      & > i {
+        position: absolute;
+      }
+  
+      &:hover {
+        background-color: #f0f1f5;
+      }
+  
+      &.current-operate-row {
+        background-color: #f0f1f5;
+      }
+  
+      &.disabled {
+        background-color: #fff;
+        color: #dcdee5;
+        cursor: not-allowed;
+      }
+    }
+  }
   @import url(../../css/form.scss);
