--- a/front/src/views/ziyanScr/hostApplication/components/application-detail/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-detail/index.scss
@@ -47,3 +47,28 @@
     }
   }
 }
+.common-card {
+  padding: 16px 0 8px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px 0 #1919290d;
+  cursor: default;
+
+  .common-card-title {
+    font-weight: 700;
+    font-size: 14px;
+    color: #313238;
+    letter-spacing: 0;
+    margin-right: 16px;
+    margin-bottom: 16px;
+  }
+
+  .common-card-content {
+    padding: 0 28px;
+  }
+
+  .common-card-content-grid-layout {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 24px;
+  }
+}
