--- a/front/src/views/ziyanScr/hostApplication/components/suborder-detail/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/suborder-detail/index.scss
@@ -1,3 +1,7 @@
-.maxheigth{
-    max-height:600px ;
+.maxheigth {
+  max-height: 600px;
+}
+.tablelist {
+  width: calc(100% - 48px) !important;
+  margin: 16px 20px 10px;
 }
