feat:SCR-主机回收-返回上一步功能数据不正确、延时刷新列表、跳转页面修改、间距修改 (merge request !1182)
Squash merge branch 'bcc/test-scr-0702' into 'bcc/feature-scr'
--bug=126786263 SCR-主机回收-返回上一步功能数据不正确

TAPD: --bug=126786263

--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -15,6 +15,7 @@
   .item-warp {
     margin-right: 50px;
     height: 45px;
+    margin-bottom: 40px;
     .item-warp-component {
       width: 300px;
     }
