feat:账号管理入口屏蔽、主机回收步骤页面问题、表格选择列宽度统一、主机申请物理机表单样式 (merge request !1186)
Squash merge branch 'bcc/test-scr-0702' into 'bcc/feature-scr'

--- a/front/src/views/ziyanScr/RecyclingResources/index.scss
+++ b/front/src/views/ziyanScr/RecyclingResources/index.scss
@@ -40,3 +40,9 @@
   line-height: 50px;
   display: flex;
 }
+.Resources-Table {
+  padding: 16px 24px;
+}
+.Business-Table {
+  padding: 0px 16px;
+}
