--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -39,7 +39,7 @@
   display: flex;
   cursor: pointer;
 }
-.scr-form-wrapper {
+.QCLOUDCVM-form-wrapper {
   margin: 0 24px;
   display: flex;
   align-items: center;
