--- a/front/src/views/ziyanScr/hostApplication/components/match-panel/components/common-resource/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/match-panel/components/common-resource/index.scss
@@ -4,7 +4,7 @@
     background-color: #fff;
     border-radius: 2px;
   }
-  .filter-CommonTable {
+  .filter-common-table {
     background-color: #fff;
   }
 }
