faet: 资源预测合并到服务请求菜单下 (merge request !1194)
Squash merge branch 'bcc/test-scr-0705' into 'bcc/feature-scr'

--- a/front/src/assets/iconfont/style.css
+++ b/front/src/assets/iconfont/style.css
@@ -137,6 +137,9 @@ url("fonts/iconcool.eot?#iefix") format("embedded-opentype");
 .bkhcm-icon-yuyanqiehuanriwen:before {
 	content: "\e10f";
 }
+.bkhcm-icon-ticket:before {
+	content: "\e15c";
+}
 .bkhcm-icon-not-favorited:before {
 	content: "\e10b";
 }
