feat: 统一表格默认样式 (merge request !1226)
Squash merge branch 'bcc/feat-scr-0711' into 'bcc/feature-scr'
feat: 统一表格默认样式

--story=118367757
# Reviewed, transaction id: 11871


TAPD: --story=118367757

--- a/front/src/views/business/cert-manager/index.scss
+++ b/front/src/views/business/cert-manager/index.scss
@@ -15,28 +15,6 @@
       margin-right: 0;
     }
   }
-
-  &.has-selection {
-    padding: 0;
-    .common-card-wrap {
-      padding: 0;
-    }
-    .bk-table .bk-table-head .bk-checkbox {
-      vertical-align: middle;
-    }
-    .bk-table .bk-table-head tr th:nth-of-type(2) .cell {
-      padding-left: 8px;
-    }
-    .bk-table .bk-table-body .cell.selection {
-      text-align: right;
-      .bk-checkbox {
-        vertical-align: middle;
-      }
-    }
-    .bk-table .bk-table-body tr td:nth-of-type(2) .cell {
-      padding-left: 8px;
-    }
-  }
 }
 
 .cert-upload-sideslider {
@@ -51,10 +29,11 @@
   }
 }
 
-.operate-text-btn, .link-text-btn {
+.operate-text-btn,
+.link-text-btn {
   color: #3a84ff;
   cursor: pointer;
-} 
+}
 
 .upload-textarea-wrap {
   min-width: 100%;
