feat: SCR功能整合改造-资源管理-业务单据-主机回收整合 (merge request !1248)
Squash merge branch 'bcc/feat-scr-integ' into 'bcc/feature-scr-integ'
feat: SCR功能整合改造-资源管理-业务单据-主机回收整合

--story=118426613
# Reviewed, transaction id: 12303


TAPD: --story=118426613

--- a/front/src/components/float-input/index.scss
+++ b/front/src/components/float-input/index.scss
@@ -1,8 +1,8 @@
 
 .virtual-input {
     .num-style{
-        background-color: #fff;
         padding: 0 5px;
+        align-self: center;
     }
 }
 .real-input {
