--- a/front/src/views/business/host/children/host-operations/index.module.scss
+++ b/front/src/views/business/host/children/host-operations/index.module.scss
@@ -1,3 +1,29 @@
+.host-operations-main {
+  :global(.felx-row) {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+    .common-search-selector {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.host-operations-tips {
+  background-color: #f0f8ff;
+  border-color: #c5daff;
+  font-size: 12px;
+  color: #63656e;
+  padding: 6px 4px;
+  margin-bottom: 8px;
+}
+
+.host-operations-toolbar {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
 .host_operations_w100 {
   width: 100px;
 }
@@ -20,7 +46,6 @@
 
 .host-operations-selection-tip {
   color: #313238;
-  margin-bottom: 8px;
 
   .host-operations-selection-tip-all {
     color: #3a84ff;
