feat: 主机列表支持复制IP

--- a/front/src/views/resource/resource-manage/hooks/use-scr-columns.scss
+++ b/front/src/views/resource/resource-manage/hooks/use-scr-columns.scss
@@ -114,3 +114,15 @@
   color: #409eff;
   cursor: pointer;
 }
+
+.cell-private-ip,
+.cell-public-ip {
+  .copy-icon {
+    display: none;
+  }
+  &:hover {
+    .copy-icon {
+      display: inline-flex;
+    }
+  }
+}
